@@ -9,6 +9,7 @@ Slated for 2.31.2
 - Added: PairGroup.randomDensity(Random, float).
 - Added: PairGroup.randomAmount(Random, int).
 - Added: hashCode() methods to TupleXY classes.
+- Added: RMath.correctClippingAspect(...).
 
 Changed in 2.31.1
 =================
